crates/connector-vmm-tests/src/snapshots/connector_vmm_tests__launch__tests__reference_boundary_line.snap
---
source: crates/connector-vmm-tests/src/launch.rs
assertion_line: 172
expression: "super::boundary(\"ghcr.io/estuary/connector-vmm:dev\", \"host\",\n\"verify\").join(\"\\n\")"
---
run
--rm
--network=host
--log-driver=none
--read-only
--cap-drop=all
--cap-add=CAP_NET_ADMIN
ghcr.io/estuary/connector-vmm:dev
boundary
verify
