crates/connector-vmm-tests/src/snapshots/connector_vmm_tests__launch__tests__reference_network_line.snap
---
source: crates/connector-vmm-tests/src/launch.rs
assertion_line: 165
expression: "super::network(\"fv_0123456789abcdef\", \"fvm0123456789ab\").join(\"\\n\")"
---
network
create
--driver=bridge
--interface-name=fvm0123456789ab
fv_0123456789abcdef
